--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="copy_hint">Para rastreá-lo, copie o código abaixo:</string>
     <string name="successful_vote">Seu voto foi registrado com sucesso!</string>
     <string name="finalize">Finalizar</string>
+    <string name="search">Pesquisar</string>
+    <string name="code">Código:</string>
 </resources>
