--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="finalize">Finalizar</string>
     <string name="search">Pesquisar</string>
     <string name="code">Código:</string>
+    <string name="regular_votes">Votos para \'Regular\':</string>
+    <string name="good_votes">Votos para \'Bom\':</string>
+    <string name="great_votes">Votos para \'Ótimo\':</string>
+    <string name="bad_votes">Votos para \'Ruim\':</string>
+    <string name="exit">Sair</string>
 </resources>
