Count and show all votes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="great_votes">Votos para \'Ótimo\':</string>
     <string name="bad_votes">Votos para \'Ruim\':</string>
     <string name="exit">Sair</string>
+    <string name="total_votes">Votos totais:</string>
 </resources>
